tests/ui/abi3_nativetype_inheritance.stderr
error[E0277]: the trait bound `PyDict: PyClass` is not satisfied
   --> tests/ui/abi3_nativetype_inheritance.rs:5:1
    |
5   | #[pyclass(extends=PyDict)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `PyClass` is not implemented for `PyDict`
    |
    = note: required because of the requirements on the impl of `PyClassBaseType` for `PyDict`
note: required by a bound in `PyClassBaseType`
   --> src/class/impl_.rs:766:1
    |
766 | / pub trait PyClassBaseType: Sized {
767 | |     type Dict;
768 | |     type WeakRef;
769 | |     type LayoutAsBase: PyCellLayout<Self>;
...   |
772 | |     type Initializer: PyObjectInit<Self>;
773 | | }
    | |_^ required by this bound in `PyClassBaseType`
    = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PyDict: PyClass` is not satisfied
   --> tests/ui/abi3_nativetype_inheritance.rs:5:1
    |
5   | #[pyclass(extends=PyDict)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `PyClass` is not implemented for `PyDict`
    |
    = note: required because of the requirements on the impl of `PyClassBaseType` for `PyDict`
note: required by a bound in `ThreadCheckerInherited`
   --> src/class/impl_.rs:753:47
    |
753 | pub struct ThreadCheckerInherited<T: Send, U: PyClassBaseType>(PhantomData<T>, U::ThreadChecker);
    |                                               ^^^^^^^^^^^^^^^ required by this bound in `ThreadCheckerInherited`
    = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)
